refactor: template context