@@ -1,2 +1,3 @@
+--enable-preview
 --enable-native-access=ALL-UNNAMED
 --sun-misc-unsafe-memory-access=allow
