@@ -123,7 +123,8 @@
           <environmentVariables>
             <RUST_BACKTRACE>full</RUST_BACKTRACE>
           </environmentVariables>
-          <argLine combine.children="append">--enable-native-access=ALL-UNNAMED
+          <argLine combine.children="append">--enable-preview
+            --enable-native-access=ALL-UNNAMED
             -Djava.library.path=${java.library.path}</argLine>
           <excludedGroups>intensive</excludedGroups>
         </configuration>
@@ -209,8 +210,6 @@
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
         <configuration>
-          <source>25</source>
-          <target>25</target>
           <compilerArgs>--enable-preview</compilerArgs>
         </configuration>
       </plugin>
